hphp/hack/test/typecheck/constraint_gen_fail1.php.exp
File "constraint_gen_fail1.php", line 17, characters 3-17:
Invalid assignment (Typing[4110])
File "constraint_gen_fail1.php", line 16, characters 29-29:
This is a value of generic type T
File "constraint_gen_fail1.php", line 17, characters 15-15:
It is incompatible with an object of exactly the class A
